--- a/bin/env/test.html
+++ b/bin/env/test.html
@@ -1,6 +1,12 @@
 <html>
-    <head></head>
-    <body>
-        <div>testPage123</div>
-    </body>
+
+<head>
+    <meta charset="utf8" />
+</head>
+
+<body>
+    <div>testPage123</div>
+    <div>测试中文123</div>
+</body>
+
 </html>
